--- a/Client/wwwroot/index.html
+++ b/Client/wwwroot/index.html
@@ -30,6 +30,7 @@
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
     <script src="blazorJsInterop.js"></script>
+    <script src="_content/CurrieTechnologies.Razor.SweetAlert2/sweetAlert2.min.js"></script>
     <script>navigator.serviceWorker.register('service-worker.js');</script>
 </body>
 
